envoy/envoy.yaml
static_resources:
  listeners:
    - name: slightly_deaf
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                  - name: backend
                    domains: 
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: backend_service
                          max_grpc_timeout: 0s

  clusters:
    - name: backend_service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: backend_service
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: foo
                    port_value: 9000
            - endpoint:
                address:
                  socket_address:
                    address: bar
                    port_value: 9000
